third_party/move/move-compiler-v2/tests/checking/typing/assign_tuple.exp

Diagnostics:
error: tuple type `(u64, S)` is not allowed as a local variable type
   ┌─ tests/checking/typing/assign_tuple.move:12:13
   │
12 │         let x = tuple(x);
   │             ^
   │
   = required by declaration of local `x`
